# retro-games-ncurses

./: CMakeLists.txt  Diagrama sem nome.drawio  main.c  main.js  maps.txt  template.gitignore
backend/: package-lock.json  package.json
backend/src/: index.ts
backend/src/constants/: index.ts
backend/src/interfaces/: player.ts  request.ts
backend/src/utils/: broadcast.ts  connection.ts  game.ts
src/: arena.c  arena.h  ncurses-handler.c  ncurses-handler.h  package.json
src/lib/: cJSON.h
src/snake/: client  client.c  client.h  logic.c  logic.h  main.c  temp.c
src/snake/constants/: commands.c  commands.h
src/snake/controllers/html/: index.html
src/snake/controllers/ncurses/: client.c  client.h  graphics.c  graphics.h  main.c
src/snake/errors/: error-handling.c  error-handling.h
src/snake/ncurses/: client.c  client.h  graphics.c  graphics.h  main.c
src/snake/services/: logic.c  logic.h
src/snake/types/: types.c  types.h
src/snake/utils/: cjsontest.c  client.c  client.h  json-handling.c  json-handling.h
src/tetris/: main.c  main.h  pieces.c
src/wasm/: main.c
wasm/: test.cjs  test.wasm
